Updates, code fixes, clarifications, etc

--- a/CiscoDevNetCreate2019/Python_Basics_02_-_Syntax_And_Basic_Statements.ipynb
+++ b/CiscoDevNetCreate2019/Python_Basics_02_-_Syntax_And_Basic_Statements.ipynb
@@ -200,7 +200,9 @@
     "\n",
     "`print(some_info)`\n",
     "\n",
-    "And you can also do some pretty cool string formatting with this, but that will come later."
+    "And you can also do some pretty cool string formatting with this, but that will come later.\n",
+    "\n",
+    "**TIP:** consider learning [pprint](https://docs.python.org/3/library/pprint.html) - the capability to “pretty-print” arbitrary Python data structures in a form which can be used as input to the interpreter."
    ]
   },
   {
