--- a/CiscoDevNetCreate2019/Python_Basics_08_-_Variable_Type_STRING.ipynb
+++ b/CiscoDevNetCreate2019/Python_Basics_08_-_Variable_Type_STRING.ipynb
@@ -33,7 +33,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_str = 'Hello World!'\n",
+    "print(new_str)\n",
+    "new_str"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -51,8 +55,20 @@
     "\n",
     "`myString[x]`\n",
     "\n",
-    "In other words, it returns the single character substring at position (or index) `x`\n",
-    "\n",
+    "In other words, it returns the single character substring at position (or index) `x`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='https://github.com/ProsperousHeart/Training-Events/blob/master/CiscoDevNetCreate2019/IMGs/sequence_numbering.png?raw=true'></img>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div class=\"alert alert-success\">\n",
     "<b>Try this!</b>\n",
     "\n",
@@ -72,14 +88,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(new_str[0])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(new_str[-1])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -122,21 +142,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test = new_str[3:]    # from index to end\n",
+    "print(test)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test = new_str[3:8]    # start from 4th element up to and including 7th element\n",
+    "print(test)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test = new_str[:5]    # assign substring of new_str starting from the beginning up to and excluding element 5\n",
+    "print(test)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -161,7 +190,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test = '*' * 10\n",
+    "print(test)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -186,7 +218,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test = 'Tell me ' + 'a story!'\n",
+    "print(test)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -219,14 +254,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_str = 'Hello World!'\n",
+    "print(new_str)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_str = new_str + \" Are you ready to rumble?\"\n",
+    "print(new_str)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -262,7 +303,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_str = \"\"\"This is a\n",
+    "multi-line\n",
+    "string... \\tHow cool!\"\"\"\n",
+    "print(new_str)\n",
+    "new_str"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-warning\">\n",
+    "Did you notice the difference between line 4 and 5 output?\n",
+    "</div>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -293,7 +349,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_str = r'Thisis\\ta new\\nstring. Can you tell?'\n",
+    "print(new_str)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-warning\">\n",
+    "What would you expect if you left the \"r\" off before the string?\n",
+    "</div>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -312,6 +380,7 @@
     "new_str = 'This is an ascii string.'\n",
     "print(isinstance(new_str, str))\n",
     "print(type(new_str))\n",
+    "print(new_str)\n",
     "```\n",
     "\n",
     "<b>... then this:</b>\n",
@@ -329,14 +398,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_str = 'This is an ascii string.'\n",
+    "print(isinstance(new_str, str))\n",
+    "print(type(new_str))\n",
+    "print(new_str)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_str = 'This is a unicode string.'.encode('utf-8')\n",
+    "print(isinstance(new_str, str))\n",
+    "print(type(new_str))\n",
+    "print(new_str)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -346,6 +425,15 @@
     "\n",
     "Python uses C-style string formatting to create new and formatted strings.\n",
     "\n",
+    "You can learn more about string formatting either on the [PyFormat](https://pyformat.info/) site or RealPython's [Guide To The Newer Python String Format Techniques](https://realpython.com/python-formatted-output/).\n",
+    "\n",
+    "In this training, we will cover two options."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Option 1:  %\n",
     "\n",
     "The `%` is used to format a set of variables in a tuple (fixed sized list).\n",
@@ -362,7 +450,7 @@
     "\n",
     "```python\n",
     "name = \"John\"\n",
-    "print(\"Hello, %s\" % (new_str,))\n",
+    "print(\"Hello, %s\" % (name,))\n",
     "```\n",
     "\n",
     "<b>... then this:</b>\n",
@@ -378,14 +466,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name = \"John\"\n",
+    "print(\"Hello, %s\" % (name,))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "age = 42\n",
+    "print('%s is %d years old.' % (name, age))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -394,6 +488,8 @@
     "### Option 2:  {}\n",
     "\n",
     "While the above is well known, this option has even more features and is usually used in most programs.\n",
+    "\n",
+    "Be mindful that this one provides reall yneat options! Check out the PyFormat link above for more.\n",
     "\n",
     "<div class=\"alert alert-success\">\n",
     "<b>Try this!</b>\n",
@@ -410,7 +506,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_str = 'This is a {} and I will be using it often.'.format(\"string\")\n",
+    "print(new_str)"
+   ]
   }
  ],
  "metadata": {
