--- a/CiscoDevNetCreate2019/Python_Basics_09_-_Variable_Type_LIST.ipynb
+++ b/CiscoDevNetCreate2019/Python_Basics_09_-_Variable_Type_LIST.ipynb
@@ -40,7 +40,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_list = ['abcd', 786, 2.34, \"John\", 70.2]\n",
+    "tiny_list = [123, 'john']\n",
+    "print(new_list)\n",
+    "print(tiny_list)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,14 +90,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(new_list[0])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(tiny_list[-1])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -126,14 +135,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(new_list[3:])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_tiny_list = tiny_list[:]    # makes a new copy - does not refer to same memory location\n",
+    "print(new_tiny_list)\n",
+    "print(\"new_tiny_list == tiny_list:  {}\".format(new_tiny_list == tiny_list))\n",
+    "print(\"new_tiny_list is tiny_list:  {}\".format(new_tiny_list is tiny_list))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -157,7 +173,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(tiny_list * 2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -181,7 +199,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(tiny_list)\n",
+    "tiny_list = tiny_list * 2\n",
+    "print(tiny_list)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -211,7 +233,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"tiny_list = {}\".format(tiny_list))\n",
+    "print(\"new_list = {}\\n\".format(new_list))\n",
+    "print(\"CONCATENATION:  {}\\n\".format(tiny_list + new_list))\n",
+    "print(\"tiny_list = {}\".format(tiny_list))\n",
+    "print(\"new_list = {}\".format(new_list))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-warning\">\n",
+    "Why did we not see concatentation after code line 3?\n",
+    "</div>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -240,7 +277,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(new_list)\n",
+    "new_list[1] = 678\n",
+    "print(new_list)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -273,8 +314,6 @@
     "```python\n",
     "tiny_list.append(1, 2)\n",
     "```\n",
-    "\n",
-    "<i>What happens? Why?</i>\n",
     "</div>"
    ]
   },
@@ -283,14 +322,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(new_tiny_list)\n",
+    "new_tiny_list.append([\"This is a list\", 2])\n",
+    "print(new_tiny_list)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tiny_list.append(1, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-warning\">\n",
+    "Anything unordinary happen? Why do you think that is?\n",
+    "</div>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -329,21 +383,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(new_tiny_list)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_tiny_list.extend(1, 2, 3, \"fun\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_tiny_list.extend([1, 2, 3, \"fun\"])\n",
+    "print(new_tiny_list)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -389,7 +450,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "temp_list = [1, 2, 3, 4, 5]\n",
+    "print('temp_list:  {}'.format(temp_list))\n",
+    "temp_var = temp_list.pop(2)\n",
+    "print('temp_var:  {}'.format(temp_var))\n",
+    "print('temp_list:  {}'.format(temp_list))\n",
+    "temp_var1 = temp_list.pop()\n",
+    "print('temp_var1:  {}'.format(temp_var1))\n",
+    "print('temp_list:  {}'.format(temp_list))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -417,7 +487,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(temp_list)\n",
+    "del temp_list[1]\n",
+    "print(temp_list)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -425,15 +499,8 @@
    "source": [
     "## Membership\n",
     "\n",
-    "See [prior section](Python_Basics_03_-_Operators.ipynb#Membership-Operators) on this."
+    "See [prior section](Python_Basics_04_-_Operators.ipynb#Membership-Operators) on this."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -449,13 +516,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -465,13 +525,6 @@
     "\n",
     "http://www.learnpython.org/en/List_Comprehensions"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
