--- a/CiscoDevNetCreate2019/Python_Basics_10_-_Variable_Type_TUPLE.ipynb
+++ b/CiscoDevNetCreate2019/Python_Basics_10_-_Variable_Type_TUPLE.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "Tuples are a sequence of immuteable (**read only**) data similar to a list. Instead of enclosed in brackets, they're enclosed in parentheses.\n",
     "\n",
-    "**NOTE:**  anyt set of multiple comma-separated objects written without identifying symbols default to tuples.\n",
+    "**NOTE:**  any set of multiple comma-separated objects written without identifying symbols default to tuples.\n",
     "\n",
     "<div class=\"alert alert-success\">\n",
     "<b>Try this!</b>\n",
@@ -33,7 +33,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_tuple = ('abcd', 786, 2.23, 'John', 70.2)\n",
+    "tiny_tuple = (123, \"Susan\")\n",
+    "print(new_tuple, tiny_tuple)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,14 +62,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_tuple[3]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_tuple[3:]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -86,7 +94,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(new_tuple * 2)\n",
+    "print(new_tuple)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -106,7 +117,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(new_tuple + tiny_tuple)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,14 +146,75 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"Is 70.2 in new_tuple?\\t{}\".format(70.2 in new_tuple))\n",
+    "print(\"Is 70 in new_tuple?\\t{}\".format(70 in new_tuple))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for item in new_tuple:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-info\">\n",
+    "<b>\"But I heard you could change tuple elements?\"</b>\n",
+    "\n",
+    "No. Whatever you have in the element of a tuple does not change. You cannot replace it or swap it out.\n",
+    "    \n",
+    "<b><i>However</i></b> ... If the element within that tuple is an object that you can update it's elements, then yes - the \"tuple can be updated\" - but not really.\n",
+    "\n",
+    "For example ... try this:\n",
+    "    \n",
+    "```python\n",
+    "new_tuple = ('abcd', [786, 2.23], 'John', {'key1': 1, 'key2': \"sure\"})\n",
+    "print(new_tuple)\n",
+    "new_tuple[1].append(\"fun\")\n",
+    "print(new_tuple)\n",
+    "new_tuple[3]['key1'] = \"How's this?\"\n",
+    "print(new_tuple)\n",
+    "```\n",
+    "    \n",
+    "```python\n",
+    "new_tuple = ('abcd', [786, 2.23], 'John', {'key1': 1, 'key2': \"sure\"})\n",
+    "print(new_tuple)\n",
+    "new_tuple[1] = [786, 2.23]\n",
+    "```\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_tuple = ('abcd', [786, 2.23], 'John', {'key1': 1, 'key2': \"sure\"})\n",
+    "print(new_tuple)\n",
+    "new_tuple[1].append(\"fun\")\n",
+    "print(new_tuple)\n",
+    "new_tuple[3]['key1'] = \"How's this?\"\n",
+    "print(new_tuple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_tuple = ('abcd', [786, 2.23], 'John', {'key1': 1, 'key2': \"sure\"})\n",
+    "print(new_tuple)\n",
+    "new_tuple[1] = [786, 2.23]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -165,14 +239,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "new_tuple = new_tuple[:4] + tiny_tuple\n",
+    "print(new_tuple)"
+   ]
   }
  ],
  "metadata": {
