--- a/CiscoDevNetCreate2019/Python_Basics_11_-_Variable_Type_DICTIONARY.ipynb
+++ b/CiscoDevNetCreate2019/Python_Basics_11_-_Variable_Type_DICTIONARY.ipynb
@@ -13,16 +13,23 @@
    "source": [
     "# [Dictionaries](http://www.learnpython.org/en/Dictionaries)\n",
     "\n",
-    "There are other things like [NamedTuples](https://docs.python.org/3/library/collections.html#collections.namedtuple) you can use, however there are some great options when using dictionaries that you can't when using NamedTuples.\n",
+    "There are other things like [NamedTuples](https://docs.python.org/3/library/collections.html#collections.namedtuple) or [DefaultDict](https://docs.python.org/3/library/collections.html#collections.defaultdict) (both from the [collections](https://docs.python.org/3/library/collections.html) library) you can use, however there are some great options when using dictionaries that you can't when using NamedTuples. (And DefaultDict limits your options for dictionary use - but it has it's purpose!)\n",
     "\n",
     "## Structure\n",
     "\n",
-    "The **dictionary** documentation can be found [here](https://docs.python.org/3/tutorial/datastructures.html#dictionaries). It is a data set that is distinguished by the `{}` braces (similar to a set) but has a key and value pair. Each key **must** be unique. _(**NOTE:**  last assignment wins!)_\n",
+    "The **dictionary** documentation can be found [here](https://docs.python.org/3/tutorial/datastructures.html#dictionaries). It is a data set that is distinguished by the `{}` braces (similar to a set) but has a key and value pair.\n",
+    "\n",
+    "Each key **must** be unique. _(**NOTE:**  last assignment to a key wins!)_\n",
     "\n",
     "One of the things I love about programming is that there is no one right way to code.\n",
     "\n",
-    "Here I will share with you 3 ways you can create a dictionary.<hr>\n",
-    "\n",
+    "Here I will share with you 3 ways you can create a dictionary.<hr>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Create Dict Option 1\n",
     "\n",
     "Unlike sequences (like **strings**, **lists**, and **tuples**) indexed by a range of numbers? Items within a dictionary are indexed by keys.\n",
@@ -43,7 +50,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_dict = dict()\n",
+    "new_dict['some_key'] = \"Whatever you want here. Any data type. PEP8 says should all be the same, but that's a style guideline.\"\n",
+    "new_dict[4] = 4\n",
+    "print(new_dict)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -55,7 +67,8 @@
     "<b>Try this!</b>\n",
     "\n",
     "```python\n",
-    "new_dict2 = {'sum things': [\"Go Here\"]}\"\n",
+    "new_dict2 = {'sum things': [\"Go Here\", ]}\n",
+    "print(new_dict2)\n",
     "```\n",
     "</div>\n",
     "\n",
@@ -67,7 +80,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_dict2 = {'sum things': [\"Go Here\", ]}\n",
+    "print(new_dict2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -91,7 +107,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dict(sape=4139, guido=4127, jack=4098)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,7 +117,7 @@
    "source": [
     "## Things To Keep In Mind\n",
     "\n",
-    "You cannot use a list as a key. Keys must be immutable like **strings** and **numnbers**.\n",
+    "You cannot use a list as a key. Keys must be immutable like **strings** and **numbers**.\n",
     "\n",
     "A dictionary is _kind of_ like a [set](https://docs.python.org/3/tutorial/datastructures.html#sets) in that if you try to create multiple keys with the same value? It will only keep 1 key / value pair.\n",
     "\n",
@@ -140,7 +158,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "{x: x**2 for x in (2, 4, 6)}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-success\">\n",
+    "<b>Try this!</b>\n",
+    "\n",
+    "```python\n",
+    "tmp_tup = ('a','b','c')\n",
+    "{tmp_tup[idx]: x for idx, x in enumerate((2, 4, 6))}\n",
+    "```\n",
+    "</div>\n",
+    "\n",
+    "<div class=\"alert alert-warning\">\n",
+    "NOTE:  This exercise can also be done using <a href=\"https://docs.python.org/3.3/library/functions.html#zip\">zip() function</a> but I wanted to provide another dict comprehension example.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp_tup = ('a','b','c')\n",
+    "{tmp_tup[idx]: x for idx, x in enumerate((2, 4, 6))}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -155,8 +203,11 @@
     "\n",
     "```python\n",
     "dict = {'Name': 'Zara', 'Age': 7, 'Class': 'First'}\n",
+    "print(dict)\n",
     "dict['Age'] = 8\t \t\t\t\t\t\t# update existing entry\n",
+    "print(dict)\n",
     "dict['School'] = \"DPS School\"\t\t\t# Add new entry\n",
+    "print(dict)\n",
     "print(\"dict['Age']: \", dict['Age']) \t#Prints value at key ‘Age’\n",
     "print(dict)\t\t\t\t\t\t\t\t# Prints complete dictionary\n",
     "print(dict.keys())   \t\t\t\t\t# Prints all the keys\n",
@@ -170,35 +221,58 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dict = {'Name': 'Zara', 'Age': 7, 'Class': 'First'}\n",
+    "print(dict)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dict['Age'] = 8                         # update existing entry\n",
+    "print(dict)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dict['School'] = \"DPS School\"           # Add new entry\n",
+    "print(dict)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"dict['Age']: \", dict['Age'])     #Prints value at key ‘Age’\n",
+    "print(dict)                             # Prints complete dictionary"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(dict.keys())                      # Prints all the keys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(dict.values())                    # Prints all the values!"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -213,9 +287,20 @@
     "\n",
     "```python\n",
     "temp_dict = {'Name': 'Zara', 'Age': 7, 'Class': 'First'}\n",
+    "print(temp_dict)\n",
+    "```\n",
+    "```python\n",
     "del temp_dict['Name']\t        # remove entry with key 'Name'\n",
-    "temp_dict.pop(\"Age\")            # returns entry and removes from dictionary\n",
+    "print(temp_dict)\n",
+    "```\n",
+    "```python\n",
+    "temp_data = temp_dict.pop(\"Age\")            # returns entry and removes from dictionary\n",
+    "print(temp_dict)\n",
+    "```\n",
+    "```python\n",
+    "del temp_data\n",
     "temp_dict.clear()\t\t\t\t# remove all entries in dict\n",
+    "print(temp_dict)\n",
     "del temp_dict\t\t\t\t\t# removes dict from local scope (doesn’t actually delete)\n",
     "```\n",
     "</div>\n",
@@ -228,35 +313,43 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "temp_dict = {'Name': 'Zara', 'Age': 7, 'Class': 'First'}\n",
+    "print(temp_dict)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "del temp_dict['Name']            # remove entry with key 'Name'\n",
+    "print(temp_dict)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "temp_data = temp_dict.pop(\"Age\")            # returns entry and removes from dictionary\n",
+    "print(temp_dict)\n",
+    "temp_data"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "del temp_data\n",
+    "temp_dict.clear()                # remove all entries in dict\n",
+    "print(temp_dict)\n",
+    "del temp_dict                    # removes dict from local scope (doesn’t actually delete)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -282,7 +375,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "phonebook = {'Sally': 8675309, 'Jane': 9745199}\n",
+    "for name, number in phonebook.items():\n",
+    "    print('You can call {} at {}'.format(name, number))"
+   ]
   }
  ],
  "metadata": {
