--- a/CiscoDevNetCreate2019/Python_Basics_12_-_Type_Conversions.ipynb
+++ b/CiscoDevNetCreate2019/Python_Basics_12_-_Type_Conversions.ipynb
@@ -30,7 +30,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "some_int = int(3.4)\n",
+    "print(some_int)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -52,7 +55,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "some_str = str(42)\n",
+    "print(some_str)\n",
+    "some_str"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,7 +80,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "some_float = float(1)\n",
+    "print(some_float)\n",
+    "type(some_float)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -102,14 +113,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "other_int = int(\"zero\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "some_int = int(\"3.4\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -134,13 +149,6 @@
     "| hex(x) | Converts an integer to a hexadecimal string |\n",
     "| oct(x) | Converts an integer to an octal string |"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
