--- a/CiscoDevNetCreate2019/Python_Basics_14_-_Functions.ipynb
+++ b/CiscoDevNetCreate2019/Python_Basics_14_-_Functions.ipynb
@@ -21,8 +21,13 @@
     "\n",
     "They are always called by something, for example but not limited to:\n",
     "- another method or function\n",
-    "- variable\n",
-    "\n",
+    "- variable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# How Do You Define A Function?\n",
     "\n",
     "Here is an example (pseudo-code):\n",
@@ -58,7 +63,7 @@
     "\n",
     "- RealPython's [Complete Guide To Python Documentation](https://realpython.com/documenting-python-code/)\n",
     "\n",
-    "... and some work well with modules that created an outprint of said documentation!the func\n",
+    "... and some work well with modules that created an outprint of said documentation!\n",
     "\n",
     "But at the bare minimum, at least explain:\n",
     "- what the function does\n",
@@ -100,7 +105,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def temp_func():\n",
+    "    \"\"\"\n",
+    "    This function prints a statement explanation.\n",
+    "\n",
+    "    \"\"\"\n",
+    "\n",
+    "    print('This \"returns\" None. Even if you used \"return\" or \"return None\"')\n",
+    "\n",
+    "temp_data = temp_func()\n",
+    "print('temp_data (type: {}):  {}'.format(type(temp_data), temp_data))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,10 +149,11 @@
     "def foo(bar):\n",
     "    \"\"\"Appends 42 to list\"\"\"\n",
     "    bar.append(42)\n",
-    "    print(bar)\n",
+    "    print(\"Inside foo ... \", bar)\n",
     "    # >> [42]\n",
     "\n",
     "numr_list = []\n",
+    "print(numr_list)\n",
     "foo(numr_list)\n",
     "print(numr_list)\n",
     "# >> [42]\n",
@@ -151,7 +168,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def foo(bar):\n",
+    "    \"\"\"Appends 42 to list\"\"\"\n",
+    "    bar.append(42)\n",
+    "    print(\"Inside foo ... \", bar)\n",
+    "    # >> [42]\n",
+    "\n",
+    "numr_list = []\n",
+    "print(numr_list)\n",
+    "foo(numr_list)\n",
+    "print(numr_list)\n",
+    "# >> [42]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -164,10 +193,11 @@
     "    \"\"\"Appends 42 to local list\"\"\"\n",
     "    bar = bar[:] # makes a copy of incoming data\n",
     "    bar.append(42)\n",
-    "    print(bar)\n",
+    "    print(\"Inside foo ... \", bar)\n",
     "    # >> [42]\n",
     "\n",
     "numr_list = []\n",
+    "print(numr_list)\n",
     "foo(numr_list)\n",
     "print(numr_list)\n",
     "# >> []\n",
@@ -182,13 +212,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def foo(bar):\n",
+    "    \"\"\"Appends 42 to local list\"\"\"\n",
+    "    bar = bar[:] # makes a copy of incoming data\n",
+    "    bar.append(42)\n",
+    "    print(\"Inside foo ... \", bar)\n",
+    "    # >> [42]\n",
+    "\n",
+    "numr_list = []\n",
+    "print(numr_list)\n",
+    "foo(numr_list)\n",
+    "print(numr_list)\n",
+    "# >> []"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is **highly recommended** that you do not modiy the input objects. If you must:\n",
+    "It is **highly recommended** that you do not modify the input objects. (Always be aware of [scope](Python_Basics_15_-_Scope_Of_Variables.ipynb)!) If you must:\n",
     "\n",
     "1. Create a new variable that calls the function using input data\n",
     "2. Have function make a local variable with a copy of the original information\n",
@@ -215,11 +258,12 @@
     "# function definition\n",
     "def printme(input_value):\n",
     "    \"\"\"Prints a passed string.\"\"\"\n",
-    "    print(input_value)\n",
+    "    print(\"printme() will print your input:  \", input_value)\n",
     "\n",
     "# call the function\n",
-    "printme()\n",
-    "```"
+    "printme(\"some string\")\n",
+    "```\n",
+    "</div>"
    ]
   },
   {
@@ -227,7 +271,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# function definition\n",
+    "def printme(input_value):\n",
+    "    \"\"\"Prints a passed string.\"\"\"\n",
+    "    print(\"printme() will print your input:  \", input_value)\n",
+    "\n",
+    "# call the function\n",
+    "printme(\"some string\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-warning\">\n",
+    "What would happen if you didn't put anything into the function call?\n",
+    "</div>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -260,7 +321,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# function definition\n",
+    "def printinfo(name, age):\n",
+    "    \"\"\"Prints the info passed into the function.\"\"\"\n",
+    "    print('Name:  {}'.format(name))\n",
+    "    print('Age:  {}'.format(age))\n",
+    "\n",
+    "# call the function\n",
+    "printinfo(age=50, name='Miki')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -292,7 +362,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# function definition\n",
+    "def printinfo(name, age=35):\n",
+    "    \"\"\"Prints the info passed into the function.\"\"\"\n",
+    "    print('Name:  {}'.format(name))\n",
+    "    print('Age:  {}'.format(age))\n",
+    "\n",
+    "# call the function\n",
+    "printinfo(age=50, name='Miki')\n",
+    "printinfo(name='Minni')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -339,7 +419,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def printinfo(arg1, *var_tuple):\n",
+    "    \"\"\"this prints a variable passed arguments\"\"\"\n",
+    "    print('Output is: ')\n",
+    "    print(arg1)\n",
+    "    for var in var_tuple:\n",
+    "        print(var)\n",
+    "\n",
+    "printinfo(10)\n",
+    "printinfo(70, 60, 50)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -381,7 +471,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# \"Define\" your anonymous function\n",
+    "# without the () it is waiting to be called\n",
+    "sum = lambda arg1, arg2: arg1 + arg2\n",
+    "\n",
+    "# call your function\n",
+    "print(\"Value of total: {}\".format(sum(10, 20)))\n",
+    "print(\"Value of total: {}\".format(sum(20, 20)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -412,7 +510,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def sum(arg1, arg2):\n",
+    "    \"\"\"Add 2 parameters and return the calculation.\"\"\"\n",
+    "    total = arg1 + arg2\n",
+    "    print('Inside the function:  {}'.format(total))\n",
+    "    return total\n",
+    "\n",
+    "total = sum(10, 20)\n",
+    "print('Outside the function:  {}'.format(total))"
+   ]
   },
   {
    "cell_type": "markdown",
