--- a/CiscoDevNetCreate2019/Python_Basics_15_-_Scope_Of_Variables.ipynb
+++ b/CiscoDevNetCreate2019/Python_Basics_15_-_Scope_Of_Variables.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "print(money)\n",
     "AddMoney()\n",
-    "print(Money)\n",
+    "print(money)\n",
     "```\n",
     "</div>"
    ]
@@ -42,7 +42,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "money = 2000\n",
+    "def AddMoney():\n",
+    "    # uncomment the next line to fix the code\n",
+    "    # global money\n",
+    "    money = money + 1\n",
+    "    # QUESTION:  what would happen if you passed it in?\n",
+    "\n",
+    "print(money)\n",
+    "AddMoney()\n",
+    "print(money)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-warning\">\n",
+    "What is needed to fix the above code?\n",
+    "</div>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -84,7 +104,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "total = 0      # this is a default global variable\n",
+    "\n",
+    "def sum(arg1, arg2):\n",
+    "    \"\"\"Add both parameters and return calculation.\"\"\"\n",
+    "    total = arg1 + arg2\n",
+    "    print('Inside total:  {}'.format(total))\n",
+    "    return total\n",
+    "\n",
+    "sum(10, 20)\n",
+    "print('Outside total:  {}'.format(total))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -102,13 +133,6 @@
     "\n",
     "4. If you change your globals, you can inadvertently create bugs in your code as well as incorrect calculations."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
