--- a/CiscoDevNetCreate2019/Python_Basics_17_-_Input___Output.ipynb
+++ b/CiscoDevNetCreate2019/Python_Basics_17_-_Input___Output.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "# Opening Files\n",
     "\n",
-    "Before you can read or write to a file, you must first **open** it:  `open()`\n",
+    "Before you can read or write to a file, you must first [**open**](https://docs.python.org/3/library/functions.html#open) it:  `open()`\n",
     "\n",
     "This will create a **file** object.\n",
     "\n",
@@ -61,12 +61,26 @@
     "- It closes the file object (no more reading/writing can be done).\n",
     "- It is best practice (and efficient coding) to use the `close()` method to close a file.\n",
     "\n",
-    "[This Stack Overflow response](https://stackoverflow.com/a/17459915/10474024) provides some great additional details.\n",
-    "\n",
+    "[This Stack Overflow response](https://stackoverflow.com/a/17459915/10474024) provides some great additional details."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Examples\n",
     "\n",
     "Here are a couple of examples.\n",
     "\n",
+    "<div class=\"alert alert-info\">\n",
+    "Check the same folder as these Jupyter notebooks to confirm there are no other files except what you downloaded from github.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Example - Vulnerable Code\n",
     "\n",
     "Can you tell why this is \"vulnerable\"?\n",
@@ -86,7 +100,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fo = open('foo.txt', 'wb')\n",
+    "print(\"Name of the file:  {}\".format(fo.name))\n",
+    "fo.close()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,7 +128,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open('foo.txt', 'w+') as file_obj:\n",
+    "    file_obj.write('some stuff')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-info\">\n",
+    "Open the file in the same folder as these Jupyter notebooks to confirm it created and wrote a file.\n",
+    "</div>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -150,7 +180,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fo = open('foo.txt', 'r+')\n",
+    "str_info = fo.read(10)\n",
+    "print(\"Read string is:  {}\".format(str_info))\n",
+    "fo.close()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -183,7 +218,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fo = open('foo.txt', 'w')\n",
+    "fo.write(\"Python is a great language.\\nYeah it's great!\\n\")\n",
+    "fo.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-warning\">\n",
+    "What happened?\n",
+    "</div>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -205,8 +253,13 @@
     "\n",
     " - If **from** is set to 0, then the reference position is at the beginning of the file.\n",
     " - If **from** is set to 1, then it uses the current position as the reference point.\n",
-    " - If **from** is set to 2, then the end of the file is the reference point.\n",
-    "\n",
+    " - If **from** is set to 2, then the end of the file is the reference point."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div class=\"alert alert-success\">\n",
     "<b>Try this!</b>\n",
     "\n",
@@ -235,7 +288,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# open a file\n",
+    "fo = open('foo.txt', 'r+')\n",
+    "temp_str = fo.read(10)\n",
+    "print(\"Read string is:  {}\".format(temp_str))\n",
+    "\n",
+    "# check current position\n",
+    "pos = fo.tell()\n",
+    "print('Current file position:  {}'.format(pos))\n",
+    "\n",
+    "# Reposition pointer at the beginning again\n",
+    "pos = fo.seek(0, 0)\n",
+    "temp_str = fo.read(10)\n",
+    "print(\"Again read string is:  {}\".format(temp_str))\n",
+    "# close opened file\n",
+    "fo.close()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -255,7 +324,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fo = open('foo.txt', 'w')\n",
+    "fo.write(\"Python is a programming langauge.\\nYeah it's great!\\n\")\n",
+    "fo.close()"
+   ]
   },
   {
    "cell_type": "markdown",
