--- a/CiscoDevNetCreate2019/Python_Basics_18_-_Exceptions___Assertions.ipynb
+++ b/CiscoDevNetCreate2019/Python_Basics_18_-_Exceptions___Assertions.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "# What Is An Exception?\n",
     "\n",
-    "**Exceptions** are events that disrupt the normal flow of a program's instructions. It is basically a situation that Python cannot cope with. For example:  expecting one kind of input and it being different.\n",
+    "[**Exceptions**](https://docs.python.org/3/tutorial/errors.html) are events that disrupt the normal flow of a program's instructions. It is basically a situation that Python cannot cope with. For example:  expecting one kind of input and it being different.\n",
     "\n",
     "An exception is an object that represents an error. When this object is raised, it not handled it will immediately terminate the program.\n",
     "\n",
@@ -50,14 +50,19 @@
     "    # this block of code executes if no exception\n",
     "    pass\n",
     "```\n",
-    "</div>\n",
-    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div class=\"alert alert-success\">\n",
     "<b>Try this!</b>\n",
     "\n",
     "```python\n",
     "try:\n",
-    "    fh = open('textfile', 'w')\n",
+    "    fh = open('textfile.txt', 'w')\n",
     "    fh.write('This is my test file for exception handling!!')\n",
     "except IOError:\n",
     "    print(\"ERROR:  can't find file or read data\")\n",
@@ -72,10 +77,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Written content in the file successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    fh = open('textfile.txt', 'w')\n",
+    "    fh.write('This is my test file for exception handling!!')\n",
+    "except IOError:\n",
+    "    print(\"ERROR:  can't find file or read data\")\n",
+    "else:\n",
+    "    print(\"Written content in the file successfully.\")\n",
+    "    fh.close()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -87,7 +109,7 @@
     "\n",
     "```python\n",
     "try:\n",
-    "    fh = open('textfile', 'r')\n",
+    "    fh = open('textfile.txt', 'r')\n",
     "    fh.write('This is my test file for exception handling!!')\n",
     "except IOError:\n",
     "    print(\"ERROR:  can't find file or read data\")\n",
@@ -100,10 +122,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Written content in the file successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    fh = open('textfile.txt', 'w')\n",
+    "    fh.write('This is my test file for exception handling!!')\n",
+    "except IOError:\n",
+    "    print(\"ERROR:  can't find file or it's read-only data\")\n",
+    "    fh.close()\n",
+    "else:\n",
+    "    print(\"Written content in the file successfully.\")\n",
+    "    fh.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-warning\">\n",
+    "What if you forgot the <b>.txt</b>?\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-warning\">\n",
+    "    What if you forgot one of the <b>.close()</b> calls? How might you improve the code?\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Written content in the file successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    fh = open('textfile.txt', 'w')\n",
+    "    fh.write('This is my test file for exception handling!!')\n",
+    "except IOError:\n",
+    "    print(\"ERROR:  can't find file or it's read-only data\")\n",
+    "else:\n",
+    "    print(\"Written content in the file successfully.\")\n",
+    "finally:\n",
+    "    fh.close()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -178,18 +261,69 @@
     "\n",
     "Click on the image below to learn more about exceptions care of [RealPython](https://realpython.com).\n",
     "\n",
-    "<a href=\"https://realpython.com/python-exceptions/#cleaning-up-after-using-finally\">![alt text](https://files.realpython.com/media/try_except_else_finally.a7fac6c36c55.png \"RealPython Intro To Exceptions\")</a>\n",
-    "\n",
+    "<a href=\"https://realpython.com/python-exceptions/#cleaning-up-after-using-finally\">![alt text](https://files.realpython.com/media/try_except_else_finally.a7fac6c36c55.png \"RealPython Intro To Exceptions\")</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Example Good --> Better\n",
     "\n",
-    "You CAN do it this way ...\n",
+    "Let's say you create this file:\n",
+    "\n",
+    "```python\n",
+    "try:\n",
+    "    fh = open('testfile.txt', 'w')\n",
+    "    fh.write('This is my test file for exception handlings!!!')\n",
+    "except IOError:\n",
+    "    # do something then either gracefully catch or re-raise\n",
+    "    raise    # you can do this ... but there is more available to you\n",
+    "finally:\n",
+    "    # this happens always\n",
+    "    print('Closing file...')\n",
+    "    fh.close()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Closing file...\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    fh = open('testfile.txt', 'w')\n",
+    "    fh.write('This is my test file for exception handlings!!!')\n",
+    "except IOError:\n",
+    "    # do something then either gracefully catch or re-raise\n",
+    "    raise    # you can do this ... but there is more available to you\n",
+    "finally:\n",
+    "    # this happens always\n",
+    "    print('Closing file...')\n",
+    "    fh.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "... and now you want to read from it! You CAN do it this way ...\n",
     "\n",
     "<div class=\"alert alert-warning\">\n",
     "\n",
     "```python\n",
     "try:\n",
-    "    fh = open('testfile', 'r')\n",
-    "    fh.write('This is my test file for exception handlings!!!')\n",
+    "    fh = open('testfile.txt', 'r')\n",
+    "    print(fh.readline()[:10])\n",
     "except IOError:\n",
     "    # do something then either gracefully catch or re-raise\n",
     "    raise    # you can do this ... but there is more available to you\n",
@@ -202,6 +336,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is my\n",
+      "Closing file...\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    fh = open('testfile.txt', 'r')\n",
+    "    print(fh.readline()[:10])\n",
+    "except IOError:\n",
+    "    # do something then either gracefully catch or re-raise\n",
+    "    raise    # you can do this ... but there is more available to you\n",
+    "finally:\n",
+    "    # this happens always\n",
+    "    print('Closing file...')\n",
+    "    fh.close()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -211,34 +372,54 @@
     "\n",
     "```python\n",
     "try:\n",
-    "    fh = open('testfile', 'r')\n",
-    "    fh.write('This is my test file for exception handlings!!!')\n",
-    "except IOError as err:\n",
-    "    # do something then either gracefully catch or re-raise\n",
-    "    print('IOError occurred:  {}'.format(repr(err)))\n",
-    "    print('IOError occurred:  {}'.format(err))\n",
-    "    raise\n",
-    "finally:\n",
-    "    # this happens always\n",
-    "    print('Attempting to close file...')\n",
-    "    try:\n",
-    "        fh.close()\n",
-    "    except NameError:\n",
-    "        print('File does not exist.')\n",
+    "    fh = open('testfile-nonexist.txt', 'r')\n",
+    "    print(fh.readline())\n",
+    "#except IOError as err:\n",
+    "#    # do something then either gracefully catch or re-raise\n",
+    "#    print('IOError occurred:  {}'.format(repr(err)))\n",
+    "#    print('IOError occurred:  {}'.format(err))\n",
+    "#    raise\n",
+    "except FileNotFoundError:\n",
+    "    print('File does not exist.')\n",
+    "    # raise\n",
+    "else:\n",
+    "    # this only happens if there was no error with the open statement\n",
+    "    fh.close()\n",
+    "    print('File was closed!')\n",
     "```\n",
-    "</div>\n",
-    "\n",
-    "That's better. **Try them out!**\n",
-    "\n",
-    "*NOTE:  results may vary - restart your kernel if you do the 2nd one first* "
+    "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File does not exist.\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    fh = open('testfile-nonexist.txt', 'r')\n",
+    "    print(fh.readline())\n",
+    "#except IOError as err:\n",
+    "#    # do something then either gracefully catch or re-raise\n",
+    "#    print('IOError occurred:  {}'.format(repr(err)))\n",
+    "#    print('IOError occurred:  {}'.format(err))\n",
+    "#    raise\n",
+    "except FileNotFoundError:\n",
+    "    print('File does not exist.')\n",
+    "    # raise\n",
+    "else:\n",
+    "    # this only happens if there was no error with the open statement\n",
+    "    fh.close()\n",
+    "    print('File was closed!')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -251,29 +432,68 @@
     "<div class=\"alert alert-warning\">\n",
     "\n",
     "```python\n",
+    "import io\n",
+    "\n",
     "try:\n",
-    "    fh = open('testfile', 'r')\n",
+    "    fh = open('testfile.txt', 'r')\n",
     "    try:\n",
     "        fh.write('This is my test file for exception handlings!!!')\n",
     "    finally:\n",
     "        # this happens always\n",
     "        print('Closing file...')\n",
     "        fh.close()\n",
-    "except IOError as err:\n",
-    "    # do something then either gracefully catch or re-raise\n",
-    "    print('IOError occurred:  {}'.format(repr(err)))\n",
-    "    print('IOError occurred:  {}'.format(err))\n",
+    "except FileNotFoundError:\n",
+    "    print('File does not exist.')\n",
     "    # raise\n",
+    "#except IOError as err:\n",
+    "#    # do something then either gracefully catch or re-raise\n",
+    "#    print('IOError occurred:  {}'.format(repr(err)))\n",
+    "#    print('IOError occurred:  {}'.format(err))\n",
+    "#    # raise\n",
+    "except io.UnsupportedOperation as err:\n",
+    "    # https://docs.python.org/3/library/io.html#io.UnsupportedOperation\n",
+    "    print('You are trying to write to a read only version of the file you opened.')\n",
     "```\n",
     "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Closing file...\n",
+      "You are trying to write to a read only version of the file you opened.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import io\n",
+    "\n",
+    "try:\n",
+    "    fh = open('testfile.txt', 'r')\n",
+    "    try:\n",
+    "        fh.write('This is my test file for exception handlings!!!')\n",
+    "    finally:\n",
+    "        # this happens always\n",
+    "        print('Closing file...')\n",
+    "        fh.close()\n",
+    "except FileNotFoundError:\n",
+    "    print('File does not exist.')\n",
+    "    # raise\n",
+    "#except IOError as err:\n",
+    "#    # do something then either gracefully catch or re-raise\n",
+    "#    print('IOError occurred:  {}'.format(repr(err)))\n",
+    "#    print('IOError occurred:  {}'.format(err))\n",
+    "#    # raise\n",
+    "except io.UnsupportedOperation as err:\n",
+    "    # https://docs.python.org/3/library/io.html#io.UnsupportedOperation\n",
+    "    print('You are trying to write to a read only version of the file you opened.')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -359,10 +579,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The argument does not contain numbers!\n",
+      " invalid literal for int() with base 10: 'abc'\n"
+     ]
+    }
+   ],
+   "source": [
+    "def num_rtn(temp):\n",
+    "    try:\n",
+    "        return int(temp)\n",
+    "    except ValueError as arg:\n",
+    "        print(\"The argument does not contain numbers!\\n\", arg)\n",
+    "num_rtn(\"abc\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -403,7 +639,7 @@
     "# -----------------------\n",
     "input_str = input('Provide input:  ')\n",
     "try:\n",
-    "    f1(input_str) # try different input to see if Exception is handled\n",
+    "    f1(int(input_str)) # try different input to see if Exception is handled\n",
     "\n",
     "\n",
     "# --------------------------------------------------------------\n",
@@ -429,17 +665,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Provide input:  1\n",
+      "no exception\n",
+      "The end! Here was your input:  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ----------\n",
+    "# Functions\n",
+    "# ----------\n",
+    "def f1(x):\n",
+    "    assert x == 1, \"your_input != 1\" # raised every time evaluates to false\n",
+    "\n",
+    "def f2(x):\n",
+    "    f1(x)\n",
+    "\n",
+    "def f3(x):\n",
+    "    f2(x)\n",
+    "    not_cool\n",
+    "\n",
+    "# -----------------------\n",
+    "# try-except & assertion\n",
+    "# -----------------------\n",
+    "input_str = input('Provide input:  ')\n",
+    "try:\n",
+    "    f1(int(input_str)) # try different input to see if Exception is handled\n",
+    "\n",
+    "\n",
+    "# --------------------------------------------------------------\n",
+    "# if you tried \"except\" without the \"Exception as some_var_name\"\n",
+    "# then you would not know what kind of exception it was\n",
+    "# --------------------------------------------------------------\n",
+    "except Exception as err:  # giving it a variable name to work with\n",
+    "    print(\"caught exception:  {}\". format(repr(err)))\n",
+    "\n",
+    "# ------------------------------------\n",
+    "# default except must be last in 3.6\n",
+    "# ------------------------------------\n",
+    "except:\n",
+    "    print(\"Some stuff happened, right?\")\n",
+    "\n",
+    "else:\n",
+    "    print(\"no exception\")\n",
+    "finally:\n",
+    "    print('The end! Here was your input:  {}'.format(input_str))"
+   ]
   },
   {
    "cell_type": "markdown",
