--- a/CiscoDevNetCreate2019/Python_Basics_13_-_Iterators_And_Generators.ipynb
+++ b/CiscoDevNetCreate2019/Python_Basics_13_-_Iterators_And_Generators.ipynb
@@ -38,8 +38,9 @@
     "<b>For example ...</b>\n",
     "\n",
     "```python\n",
-    "new_list = [1, 2, 3, 4]\n",
+    "new_list = [1, 2, 3, 4, 5]\n",
     "it = iter(new_list)    # builds an iterator object and assigns to:  it\n",
+    "print(next(it))\n",
     "print(next(it))\n",
     "```\n",
     "</div>"
@@ -50,7 +51,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_list = [1, 2, 3, 4, 5]\n",
+    "it = iter(new_list)    # builds an iterator object and assigns to:  it\n",
+    "print(next(it))\n",
+    "print(next(it))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -77,7 +83,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# using the code from above ...\n",
+    "for x in it:\n",
+    "    print(x, end=\" \")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -103,7 +113,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "it = iter(new_list)\n",
+    "loop_bool = True\n",
+    "while loop_bool:\n",
+    "    try:\n",
+    "        print(next(it))\n",
+    "    except StopIteration:\n",
+    "        print('Got to end!')\n",
+    "        loop_bool = False"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -117,8 +136,13 @@
     "\n",
     "When the function is called, it automatically returns a generator object even before code execution.\n",
     "\n",
-    "**NOTE:**  You can potentially generate an infinite number of values, so **pay attention** to your code!\n",
-    "\n",
+    "**NOTE:**  You can potentially generate an infinite number of values, so **pay attention** to your code!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div class=\"alert alert-success\">\n",
     "<b>Try this!</b>\n",
     "\n",
@@ -136,11 +160,14 @@
     "\n",
     "fibo = fibonacci(5)    # fibo is now an iterator object\n",
     "\n",
-    "while True:\n",
+    "loop_bool = True\n",
+    "while loop_bool:\n",
     "    try:\n",
     "        print(next(fibo), end = \" \")\n",
     "    except StopIteration:\n",
-    "        sys.exit('At the end!')    # terminates program\n",
+    "        # sys.exit('At the end!')    # terminates program\n",
+    "        print('\\nAt the end!')\n",
+    "        loop_bool = False\n",
     "```\n",
     "</div>"
    ]
@@ -150,7 +177,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# This defines a generator, which generates an iterator\n",
+    "import sys\n",
+    "def fibonacci(n):  # generator function\n",
+    "    a, b, counter = 0, 1, 0\n",
+    "    while True:\n",
+    "        if counter > n:\n",
+    "            return\n",
+    "        yield a\n",
+    "        a, b = b, a + b\n",
+    "        counter += 1\n",
+    "\n",
+    "fibo = fibonacci(5)    # fibo is now an iterator object\n",
+    "\n",
+    "loop_bool = True\n",
+    "while loop_bool:\n",
+    "    try:\n",
+    "        print(next(fibo), end = \" \")\n",
+    "    except StopIteration:\n",
+    "        # sys.exit('At the end!')    # terminates program\n",
+    "        print('\\nAt the end!')\n",
+    "        loop_bool = False"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -180,7 +229,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "def lottery():\n",
+    "    # returns 6 numbers between 1 and 40\n",
+    "    for i in range(6):\n",
+    "        yield random.randint(1, 40)\n",
+    "\n",
+    "    # returns a 7th number between 1 and 15\n",
+    "    yield random.randint(1, 15)\n",
+    "\n",
+    "for random_number in lottery():\n",
+    "    print('And the next number is ... {}!'.format(random_number))"
+   ]
   }
  ],
  "metadata": {
